fix(styles): avoid layout shift caused by scrollbar on page change

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -82,6 +82,7 @@
 
 body {
     margin: 0;
+    overflow-y: scroll;
 }
 
 .pageContainer {
