--- a/src/pages/CharacterPage/Character/Character.module.css
+++ b/src/pages/CharacterPage/Character/Character.module.css
@@ -1,7 +1,7 @@
 .pageContainer {
     max-width: var(--container-width);
     margin: 0 auto;
-    padding: 32px 16px;
+    padding-top: 32px;
 }
 
 .container {
